--- a/laradock/nginx/sites/backend.test1.conf
+++ b/laradock/nginx/sites/backend.test1.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name test1.local www.test1.local;
+    server_name backend.test1.local www.backend.test1.local;
     root /var/www/test1/backend/web;
     index index.php index.html index.htm;
 
