--- a/laradock/env.example
+++ b/laradock/env.example
@@ -237,8 +237,8 @@ PMA_DB_ENGINE=mysql
 
 # Credentials/Port:
 
-PMA_USER=davron112
-PMA_PASSWORD=913933336
+PMA_USER=test123
+PMA_PASSWORD=test123
 PMA_ROOT_PASSWORD=root
 PMA_PORT=8980
 
